Reajuste del menú.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -18,15 +18,10 @@
       <div class="init-logo">
         <a href="#init"><img src="resources/style/images/AcousticLab-logo2.png"></a>
       </div>
-<!--      <div class="init-menu">
-        <button href="funciones.js" class="tablinks" onclick="displayService(event, 'minDistance')">Calcular distancias mínimas</button>
-        <button href="funciones.js" class="tablinks" onclick="displayService(event, 'reverTime')">Calcular tiempo de reverberación</button>
-        <button href="funciones.js" class="tablinks" onclick="displayService(event, 'materials')">Consultar lista de materiales</button>
-      </div> -->
       <div class="init-menu">
-        <a href="#minDistance" class="tablinks">Calcular distancias mínimas</a>
-        <a href="#reverTime" class="tablinks">Calcular tiempo de reverberación</a>
-        <a href="#materials" class="tablinks">Consultar lista de materiales</a>
+        <a href="#minDistance" class="tablinks"><p>Calcular distancias mínimas</p></a>
+        <a href="#reverTime" class="tablinks"><p>Calcular tiempo de reverberación</p></a>
+        <a href="#materials" class="tablinks"><p>Consultar lista de materiales</p></a>
       </div>
     </div>
 
