Mejoras de visualiación.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -40,7 +40,9 @@
       <p>¡Navega y haz ciencia ilimitadamente!</p>
     </div>
 
+
       <div id="minDistance" class="tabcontent">
+        <h3 class="content-title">Cálculo de la distancia mínima</h3>
         <div class="contenedorPrincipal">
           <div class="canvasDisplay">
             <div class="displayOne">
@@ -126,6 +128,7 @@
 -->
 
       <div id="reverTime" class="tabcontent">
+        <h3 class="content-title">Cálculo del tiempo de reverberación</h3>
         <div class="contenedorPrincipal">
           <div align="center">
             <button href="funciones.js" class="tablinks-2 options-menu s1" onclick="displayService2(event, 'sabine')">Tiempo de reverberación por Sabine</button>
@@ -256,6 +259,7 @@
 -->
 
       <div id="materials" class="tabcontent">
+        <h3 class="content-title">Tablas de materiales</h3>
         <div class="contenedorPrincipal">
           <div align="center">
             <button href="funciones.js" class="tablinks-3 options-menu" onclick="displayService3(event, 'tabPared')">Coeficientes de absoción Paredes</button>
