--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -41,7 +41,7 @@
     </div>
 
 
-      <div id="minDistance" class="tabcontent">
+      <div id="minDistance">
         <h3 class="content-title">Cálculo de la distancia mínima</h3>
         <div class="contenedorPrincipal">
           <div class="canvasDisplay">
@@ -64,7 +64,7 @@
             <div id="tiempoRever">
               <h4>Tiempo de reverberación esperado</h4>
               <div class="in-box">
-                <input  id="t" class="effect" placeholder="Tiempo reverberación [s]">
+                <input  id="t" class="info-input" placeholder="Tiempo reverberación [s]">
                 <span class="focus-border"></span>
               </div>
             </div>
@@ -72,15 +72,15 @@
             <div id="dimRecinto">
               <h4>Dimensiones del recinto</h4>
               <div class="in-box">
-                <input  id="xv" class="effect" placeholder="Laro del recinto [m]">
+                <input  id="xv" class="info-input" placeholder="Laro del recinto [m]">
                 <span class="focus-border"></span>
               </div>
               <div class="in-box">
-                <input  id="yv" class="effect" placeholder="Ancho del recinto [m]">
+                <input  id="yv" class="info-input" placeholder="Ancho del recinto [m]">
                 <span class="focus-border"></span>
               </div>
               <div class="in-box">
-                <input  id="zv" class="effect" placeholder="Altura del recinto [m]">
+                <input  id="zv" class="info-input" placeholder="Altura del recinto [m]">
                 <span class="focus-border"></span>
               </div>
             </div>
@@ -88,15 +88,15 @@
             <div id="dimFuente">
               <h4>Posición de la fuente</h4>
               <div class="in-box">
-                <input  id="xs" class="effect" placeholder="Distancia con pared izq. [m]">
+                <input  id="xs" class="info-input" placeholder="Distancia con pared izq. [m]">
                 <span class="focus-border"></span>
               </div>
               <div class="in-box">
-                <input  id="ys" class="effect" placeholder="Distancia con pared inferior [m]">
+                <input  id="ys" class="info-input" placeholder="Distancia con pared inferior [m]">
                 <span class="focus-border"></span>
               </div>
               <div class="in-box">
-                <input  id="zs" class="effect" placeholder="Distancia con techo [m]">
+                <input  id="zs" class="info-input" placeholder="Distancia con techo [m]">
                 <span class="focus-border"></span>
               </div>
 
@@ -105,20 +105,20 @@
             <div id="dimMicro">
               <h4>Posición del micrófono</h4>
               <div class="in-box">
-                <input  id="xm" class="effect" placeholder="Distancia con pared izq. [m]">
+                <input  id="xm" class="info-input" placeholder="Distancia con pared izq. [m]">
                 <span class="focus-border"></span>
               </div>
               <div class="in-box">
-                <input  id="ym" class="effect" placeholder="Distancia con pared inferior [m]">
+                <input  id="ym" class="info-input" placeholder="Distancia con pared inferior [m]">
                 <span class="focus-border"></span>
               </div>
               <div class="in-box">
-                <input  id="zm" class="effect" placeholder="Distancia con techo [m]">
+                <input  id="zm" class="info-input" placeholder="Distancia con techo [m]">
                 <span class="focus-border"></span>
               </div>
             </div>
 
-            <button class="calcButton" onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')">CALCULAR</button>
+            <button class="calculate-button" onclick="main('t', 'xv', 'yv', 'zv', 'xs', 'ys', 'zs','xm', 'ym', 'zm')"><a href="#minDistance">CALCULAR</a></button>
 
           </div>
         </div>
@@ -127,31 +127,31 @@
 <!--
 -->
 
-      <div id="reverTime" class="tabcontent">
+      <div id="reverTime">
         <h3 class="content-title">Cálculo del tiempo de reverberación</h3>
         <div class="contenedorPrincipal">
           <div align="center">
-            <button href="funciones.js" class="tablinks-2 options-menu s1" onclick="displayService2(event, 'sabine')">Tiempo de reverberación por Sabine</button>
-            <button href="funciones.js" class="tablinks-2 options-menu s1" onclick="displayService2(event, 'eyring')">Tiempo de reverberación por Eyring</button>
+            <button href="funciones.js" class="menu-button" onclick="displayService(event, 'reverberation-time', 'sabine')">Tiempo de reverberación por Sabine</button>
+            <button href="funciones.js" class="menu-button" onclick="displayService(event, 'reverberation-time', 'eyring')">Tiempo de reverberación por Eyring</button>
           </div>
 
 
-          <div id="sabine" class="tabcontent-2">
+          <div id="sabine" class="reverberation-time">
             <div class="reverDisplay">
               <h3>Tiempo de reverberación por Sabine</h3>
 
               <div id="supRecinto">
                 <h4>Dimensiones del recinto</h4>
                 <div class="in-box">
-                  <input  id="x-1" class="effect" placeholder="Laro del recinto [m]">
+                  <input  id="x-1" class="info-input" placeholder="Laro del recinto [m]">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="y-1" class="effect" placeholder="Ancho del recinto [m]">
+                  <input  id="y-1" class="info-input" placeholder="Ancho del recinto [m]">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="z-1" class="effect" placeholder="Altura del recinto [m]">
+                  <input  id="z-1" class="info-input" placeholder="Altura del recinto [m]">
                   <span class="focus-border"></span>
                 </div>
               </div>
@@ -159,56 +159,56 @@
               <div id="coefRecinto">
                 <h4>Coeficientes de absorción</h4>
                 <div class="in-box">
-                  <input id="coef_techo-1" class="effect" placeholder="Coef. abs. Techo" />
+                  <input id="coef_techo-1" class="info-input" placeholder="Coef. abs. Techo" />
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_1-1" class="effect" placeholder="Coef. abs. Pared 1">
+                  <input  id="coef_pared_1-1" class="info-input" placeholder="Coef. abs. Pared 1">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_2-1" class="effect" placeholder="Coef. abs. Pared 2">
+                  <input  id="coef_pared_2-1" class="info-input" placeholder="Coef. abs. Pared 2">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_3-1" class="effect" placeholder="Coef. abs. Pared 3">
+                  <input  id="coef_pared_3-1" class="info-input" placeholder="Coef. abs. Pared 3">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_4-1" class="effect" placeholder="Coef. abs. Pared 4">
+                  <input  id="coef_pared_4-1" class="info-input" placeholder="Coef. abs. Pared 4">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_suelo-1" class="effect" placeholder="Coef. abs. Suelo">
+                  <input  id="coef_suelo-1" class="info-input" placeholder="Coef. abs. Suelo">
                   <span class="focus-border"></span>
                 </div>
               </div>
 
               <div id="putSabineTR"></div>
 
-              <button class="calcButton" onclick="optionGetReverberationTime('Sabine','x-1','y-1','z-1',
+              <button class="calculate-button" onclick="optionGetReverberationTime('Sabine','x-1','y-1','z-1',
                 'coef_techo-1','coef_pared_1-1','coef_pared_2-1', 'coef_pared_3-1', 'coef_pared_4-1',
                 'coef_suelo-1')">CALCULAR SABINE
               </button>
             </div>
           </div>
 
-          <div id="eyring" class="tabcontent-2">
+          <div id="eyring" class="reverberation-time">
             <div class="reverDisplay">
               <h3>Tiempo de reverberación por Eyring</h3>
 
               <div id="supRecinto">
                 <h4>Dimensiones del recinto</h4>
                 <div class="in-box">
-                  <input  id="x-2" class="effect" placeholder="Laro del recinto [m]">
+                  <input  id="x-2" class="info-input" placeholder="Laro del recinto [m]">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="y-2" class="effect" placeholder="Ancho del recinto [m]">
+                  <input  id="y-2" class="info-input" placeholder="Ancho del recinto [m]">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="z-2" class="effect" placeholder="Altura del recinto [m]">
+                  <input  id="z-2" class="info-input" placeholder="Altura del recinto [m]">
                   <span class="focus-border"></span>
                 </div>
               </div>
@@ -216,34 +216,34 @@
               <div id="coefRecinto">
                 <h4>Coeficientes de absorción</h4>
                 <div class="in-box">
-                  <input  id="coef_techo-2" class="effect" placeholder="Coef. abs. Techo">
+                  <input  id="coef_techo-2" class="info-input" placeholder="Coef. abs. Techo">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_1-2" class="effect" placeholder="Coef. abs. Pared 1">
+                  <input  id="coef_pared_1-2" class="info-input" placeholder="Coef. abs. Pared 1">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_2-2" class="effect" placeholder="Coef. abs. Pared 2">
+                  <input  id="coef_pared_2-2" class="info-input" placeholder="Coef. abs. Pared 2">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_3-2" class="effect" placeholder="Coef. abs. Pared 3">
+                  <input  id="coef_pared_3-2" class="info-input" placeholder="Coef. abs. Pared 3">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_pared_4-2" class="effect" placeholder="Coef. abs. Pared 4">
+                  <input  id="coef_pared_4-2" class="info-input" placeholder="Coef. abs. Pared 4">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
-                  <input  id="coef_suelo-2" class="effect" placeholder="Coef. abs. Suelo">
+                  <input  id="coef_suelo-2" class="info-input" placeholder="Coef. abs. Suelo">
                   <span class="focus-border"></span>
                 </div>
               </div>
 
               <div id="putEyringTR"></div>
 
-              <button class="calcButton" onclick="optionGetReverberationTime('Eyring','x-2','y-2','z-2',
+              <button class="calculate-button" onclick="optionGetReverberationTime('Eyring','x-2','y-2','z-2',
                 'coef_techo-2','coef_pared_1-2','coef_pared_2-2', 'coef_pared_3-2', 'coef_pared_4-2',
                 'coef_suelo-2')">CALCULAR EYRING
               </button>
@@ -258,18 +258,18 @@
 
 -->
 
-      <div id="materials" class="tabcontent">
+      <div id="materials">
         <h3 class="content-title">Tablas de materiales</h3>
         <div class="contenedorPrincipal">
           <div align="center">
-            <button href="funciones.js" class="tablinks-3 options-menu" onclick="displayService3(event, 'tabPared')">Coeficientes de absoción Paredes</button>
-            <button href="funciones.js" class="tablinks-3 options-menu" onclick="displayService3(event, 'tabTecho')">Coeficientes de absoción Techo</button>
-            <button href="funciones.js" class="tablinks-3 options-menu" onclick="displayService3(event, 'tabSuelo')">Coeficientes de absoción Suelo</button>
+            <button href="funciones.js" class="menu-button" onclick="displayService(event, 'materials-table', 'tabPared')">Coeficientes de absoción Paredes</button>
+            <button href="funciones.js" class="menu-button" onclick="displayService(event, 'materials-table', 'tabTecho')">Coeficientes de absoción Techo</button>
+            <button href="funciones.js" class="menu-button" onclick="displayService(event, 'materials-table', 'tabSuelo')">Coeficientes de absoción Suelo</button>
           </div>
 
-          <div align="center" id="tabPared" class="tabcontent-3">
+          <div align="center" id="tabPared" class="materials-table">
             <a href="modules/data/coef_abs_paredes.xlsx" download>
-              <button class="downloadButton">Download</button>
+              <button class="download-button">Download</button>
             </a>
             <table class="tg">
               <tr>
@@ -1373,9 +1373,9 @@
               </tr>
             </table>
           </div>
-          <div align="center" id="tabTecho" class="tabcontent-3">
+          <div align="center" id="tabTecho" class="materials-table">
             <a href="modules/data/coef_abs_techos.xlsx" download>
-              <button class="downloadButton">Download</button>
+              <button class="download-button">Download</button>
             </a>
             <table class="tg">
               <tr>
@@ -1958,9 +1958,9 @@
               </tr>
             </table>
           </div>
-          <div align="center" id="tabSuelo" class="tabcontent-3">
+          <div align="center" id="tabSuelo" class="materials-table">
             <a href="modules/data/coef_abs_suelos.xlsx" download>
-              <button class="downloadButton">Download</button>
+              <button class="download-button">Download</button>
             </a>
             <table class="tg">
             <tr>
