--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="resources/services/displayService.js"></script>
     <script type="text/javascript" src="resources/values/valuesConst.js"></script>
     <script type="text/javascript" src="resources/objects/room.js"></script>
+    <script type="text/javascript" src="resources/objects/object.js"></script>
   </head>
 
   <body onload="myCanvas()">
