Reajustes de estilos.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -20,9 +20,9 @@
         <a href="#init">ACOUSTIC-LAB</a>
       </div>
       <div class="init-menu">
-        <a href="#mark-distance"><p>Calcular distancias mínimas</p></a>
-        <a href="#mark-reverberation"><p>Calcular tiempo de reverberación</p></a>
-        <a href="#mark-materials"><p>Consultar lista de materiales</p></a>
+        <a href="#mark-distance"><p>Calcular distancias<br>mínimas</p></a>
+        <a href="#mark-reverberation"><p>Calcular tiempo de<br>reverberación</p></a>
+        <a href="#mark-materials"><p>Consultar lista<br>de materiales</p></a>
       </div>
     </div>
 
