Cambio palabra en el contáctanos.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -2865,7 +2865,7 @@
       </div>
       <div class="about-area">
         <h2>conócenos</h2>
-        <p> Esto es un Proyecto de Fin Carrera realizado por Pablo Roda, estudiante
+        <p> Esto es el Proyecto de Fin Carrera realizado por Pablo Roda, estudiante
           de Ingeniería de Sistemas Audiovisuales y Multimedia en la Universidad
           Rey Juan Calos.
         </p>
