--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -2,9 +2,9 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8" name="program" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="resources/style/program.css">
-    <script type="text/javascript" src="modules/optionGetMinDistance.js" ></script>
-    <script type="text/javascript" src="modules/optionGetReverberationTime.js" ></script>
+    <link rel="stylesheet" href="resources/style/style.css">
+    <script type="text/javascript" src="modules/getMinDistanceApp.js" ></script>
+    <script type="text/javascript" src="modules/getReverberationTimeApp.js" ></script>
     <script type="text/javascript" src="resources/services/acousticService.js"></script>
     <script type="text/javascript" src="resources/services/canvasService.js"></script>
     <script type="text/javascript" src="resources/services/displayService.js"></script>
@@ -204,8 +204,8 @@
     <h3 class="content-title">Cálculo del tiempo de reverberación</h3>
     <div class="contenedor-principal">
       <div align="center">
-        <button href="funciones.js" class="menu-button" onclick="displayService(event, 'reverberation-time', 'sabine')">Tiempo de reverberación por Sabine</button>
-        <button href="funciones.js" class="menu-button" onclick="displayService(event, 'reverberation-time', 'eyring')">Tiempo de reverberación por Eyring</button>
+        <button class="menu-button" onclick="displayService(event, 'reverberation-time', 'sabine')">Tiempo de reverberación por Sabine</button>
+        <button class="menu-button" onclick="displayService(event, 'reverberation-time', 'eyring')">Tiempo de reverberación por Eyring</button>
       </div>
 
       <div id="sabine" class="reverberation-time">
@@ -368,9 +368,9 @@
       <h3 class="content-title">Tablas de materiales</h3>
       <div class="contenedor-principal">
         <div align="center">
-          <button href="funciones.js" class="menu-button" onclick="displayService(event, 'materials-table', 'tabPared')">Coeficientes de absoción Paredes</button>
-          <button href="funciones.js" class="menu-button" onclick="displayService(event, 'materials-table', 'tabTecho')">Coeficientes de absoción Techo</button>
-          <button href="funciones.js" class="menu-button" onclick="displayService(event, 'materials-table', 'tabSuelo')">Coeficientes de absoción Suelo</button>
+          <button class="menu-button" onclick="displayService(event, 'materials-table', 'tabPared')">Coeficientes de absoción Paredes</button>
+          <button class="menu-button" onclick="displayService(event, 'materials-table', 'tabTecho')">Coeficientes de absoción Techo</button>
+          <button class="menu-button" onclick="displayService(event, 'materials-table', 'tabSuelo')">Coeficientes de absoción Suelo</button>
         </div>
 
         <div align="center" id="tabPared" class="materials-table">
