[+] Añadidas segundo tipo de búsqueda: por nombre o por NRC.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -368,7 +368,7 @@
       <h3 class="content-title">Tablas de materiales</h3>
       <div class="contenedor-principal">
         <div class="in-box">
-          <input id="inputValue" class="info-input" onkeyup="myFunction()" placeholder="Búsqueda por nombre o por coeficiente de absorción sonora..."></input>
+          <input id="inputValue" class="info-input" onkeyup="searchInSelectionTable()" placeholder="Búsqueda por nombre del material o por NRC..."></input>
         </div>
         <div align="center" id="materialsTable">
           <table class="tg">
@@ -397,7 +397,7 @@
                 <td class="tg-0pky">0.27</td>
                 <td class="tg-0pky">0.27</td>
                 <td class="tg-0pky">0.37</td>
-                <td class="tg-0pky">camello</td>
+                <td class="tg-0pky">0.21</td>
               </tr>
               <tr>
                 <td class="tg-typeMaterial">Corcho en baldosas contra respaldo solido</td>
