--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="resources/values/valuesConst.js"></script>
     <script type="text/javascript" src="resources/objects/room.js"></script>
     <script type="text/javascript" src="resources/objects/object.js"></script>
+    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   </head>
 
   <body onload="myCanvas()">
