[+] Añadido objeto y función que define los primeros puntos sugeridos

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="resources/values/valuesConst.js"></script>
     <script type="text/javascript" src="resources/objects/room.js"></script>
     <script type="text/javascript" src="resources/objects/object.js"></script>
+    <script type="text/javascript" src="resources/objects/suggestedPoints.js"></script>
   </head>
 
   <body onload="myCanvas()">
