[+] Terminada aplicación que devuelve terna de puntos.

--- a/acoustic-lab.html
+++ b/acoustic-lab.html
@@ -150,7 +150,7 @@
           <div id="dimRecinto">
             <h4>Dimensiones del recinto</h4>
             <div class="in-box">
-              <input  id="xv" class="info-input" placeholder="Laro del recinto [m]">
+              <input  id="xv" class="info-input" placeholder="Lado del recinto [m]">
               <span class="focus-border"></span>
             </div>
             <div class="in-box">
@@ -205,7 +205,8 @@
       <h3 class="content-title">Propuesta de puntos de medición</h3>
       <div class="contenedor-principal">
         <div class="suggested-display">
-          <button class="calculate-button" onclick="optionGetShortList()"><a href="">Obtener terna de puntos</a></button>
+          <button class="calculate-button" onclick="optionGetShortList()"><a>Obtener terna de puntos</a></button>
+          <div id="suggested-list"></div>
         </div>
       </div>
     </div>
@@ -247,7 +248,7 @@
             <div id="supRecinto">
               <h4>Dimensiones del recinto</h4>
               <div class="in-box">
-                <input  id="x-1" class="info-input" placeholder="Laro del recinto [m]">
+                <input  id="x-1" class="info-input" placeholder="Lado del recinto [m]">
                 <span class="focus-border"></span>
               </div>
               <div class="in-box">
@@ -323,7 +324,7 @@
             <div id="supRecinto">
               <h4>Dimensiones del recinto</h4>
                 <div class="in-box">
-                  <input  id="x-2" class="info-input" placeholder="Laro del recinto [m]">
+                  <input  id="x-2" class="info-input" placeholder="Lado del recinto [m]">
                   <span class="focus-border"></span>
                 </div>
                 <div class="in-box">
